- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 4.13.1
- 
    None
- 
    Self-built Creator 4.13.1
 Qt 5.15.1
 macOS 10.15
- 
        
- 
        0d6e2454d6a752c189a6368cc1b8eeb7506b8965 (qt-creator/qt-creator/master)
Right clicking on a set breakpoint and choosing disable in the context menu does not seem to work. Doing it a second time successfully disables the breakpoint.
Same for enabling.
| For Gerrit Dashboard: QTCREATORBUG-24669 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 315380,2 | Debugger: Fix enabling/disabling breakpoints | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |